--- a/01 - First-azure-pipelines.yml
+++ b/01 - First-azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
+- script: echo Hello, world. Welcome to Azure Devops!
   displayName: 'Run a one-line script'
 
 - script: |
